# pr01-social

./: .gitignore  README.md
frente-social/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
frente-social/src/: index.html  main.ts  styles.scss
frente-social/src/@types/: react-to-webcomponent.d.ts
frente-social/src/app/: app.component.html  app.component.spec.ts  app.component.ts  (+2 more)
oculto-social/: ambiente.dev  der_db.dbm  der_db_fixed.dbm  pyproject.toml  requisitos.txt
oculto-social/applogin/: urls.py
oculto-social/applogin/atributos/: __init__.py  clsLogin.py
oculto-social/applogin/migrations/: 0001_initial.py
oculto-social/applogin/modelos/: __init__.py  tbl_usuarios.py  tbl_usuarios_admin.py
oculto-social/applogin/serializador/: __init__.py  clsLoginSerial.py
oculto-social/applogin/views/: __init__.py  clsAutenticacaoView.py  clsLoginView.py
oculto-social/appposts/: apps.py  models.py
oculto-social/appposts/migrations/: 0001_initial.py
oculto-social/appposts/serializadores/: __init__.py  clsPostSerial.py
oculto-social/appposts/views/: __init__.py  clsPostView.py
oculto-social/ocultosocial/: manage.py  settings.py  urls.py  views.py
oculto-social/ocultosocial/DAL/: __init__.py  clsDAL.py
oculto-social/ocultosocial/comuns/: __init__.py  clsComuns.py
oculto-social/ocultosocial/modelo_der/: TblUsuarios.py  __init__.py
oculto-social/ocultosocial/ocultosocial/: asgi.py  wsgi.py
oculto-social/ocultosocial/paginas/inicial/: ola_mundo.html
oculto-social/ocultosocial/serializador/: __init__.py  clsSerial.py
(+53 files in other folders)
